[gd_scene load_steps=9 format=2]

[ext_resource path="res://source/actors/AgressiveAlien.gd" type="Script" id=1]
[ext_resource path="res://assets/ennemies/ALIEN GAUCHE.png" type="Texture" id=2]
[ext_resource path="res://assets/sound/effects/monster_attack.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sound/effects/monster_hurt.wav" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 26.8701
height = 65.0538

[node name="AgressiveAlien" type="KinematicBody2D" groups=["enemy"]]
scale = Vector2( 3, 3 )
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["enemy"]]
position = Vector2( -19, -23 )
rotation = 0.785398
shape = SubResource( 4 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="Hitbox" type="Area2D" parent="." groups=["enemy"]]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox" groups=["enemy"]]
position = Vector2( 9.66667, 2 )
rotation = -0.785398
scale = Vector2( 1, 1 )
shape = SubResource( 4 )

[node name="AttackAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
autoplay = true
max_distance = 10000.0

[node name="HurtAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
